# slack-tui

./: Cargo.toml  fixtures.yml  todo.txt
src/: canvas.rs  channel_selector.rs  input_manager.rs  layout.rs  main.rs  message_buffer.rs  util.rs
src/chat/: channel.rs  mod.rs  user.rs
src/components/: app.rs  channel_selector.rs  event_loop.rs  input_manager.rs  layout.rs  mod.rs
src/data/: build_app_state.rs  loader.rs  mod.rs
src/messages/: buffer.rs  error.rs  loader.rs  loading.rs  message.rs  mod.rs  standard.rs  unsupported.rs
src/models/: app_state.rs  canvas.rs  channel.rs  message_buffer.rs  mod.rs  user.rs
src/models/messages/: error.rs  loading.rs  mod.rs  standard.rs  unsupported.rs
src/widgets/: channel_list.rs  chat_history.rs  line_edit.rs  mod.rs  scrollbar.rs
